# wlcomp

./: CMakeLists.txt  README.md  build.sh
include/: wlroots.hpp
src/: main.cpp
